# rbinstall

./: .gitignore  .reviewboardrc  AUTHORS  CONTRIBUTING  README.md  dev-requirements.txt  pyproject.toml
rbinstall/: __init__.py  distro_info.py  errors.py  install_methods.py  install_steps.py  main.py  process.py  pypi.py  state.py  ui.py  versioning.py  wizard.py
rbinstall/tests/: test_install_methods.py  test_install_steps.py  test_pypi.py  test_state.py  test_versioning.py
scripts/: pack.sh
scripts/templates/: bootstrap.py
tests/: .env  .gitignore  docker-compose.yaml  rbinstall-test.ini.tmpl  run-install-tests.py
tests/squid-proxy/: Dockerfile  squid-urlrewrite.conf  squid.conf
